--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WidgetShop</title>
+  <title>Bento</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
+  <%= stylesheet_link_tag "normalize.css" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app="bento" class="site-color">
+<%= render :partial => '/shared/wrapbootstrap_header'%>
+
+  <% if notice || alert %>
+    <div class="row">
+      <% if notice || alert %>
+        <div class="flash_messages">
+          <%= raw "<div data-alert class='alert-box warning'> #{notice} <a href='' class='close'>&times;</a></div>"  if notice %>
+          <%= raw "<div data-alert class='alert-box alert'>#{alert} <a href='' class='close'>&times;</a></div>"     if alert %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+<% if false %>
 <% if current_order %>
 <p style="border:1px solid black;padding:10px;">
   You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
   <%= number_to_currency current_order.total_before_tax %>.
 </p>
 <%= link_to "View basket", basket_path %>
-<%= flash[:notice] %>
 <%= link_to "Checkout", checkout_path %>
+<% end%>
+
+<%= flash[:notice] %>
 <% end %>
+
+
 <%= yield %>
 
 </body>
