--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,21 @@
 
-<h2><%= @product.name %></h2>
-
-<% if @product.default_image %>
-  <%= image_tag @product.default_image.path, :width => '200px', :style => "float:right" %>
-<% end %>
-
-<p><%= @product.short_description %></p>
-<p>
-  <b><%= number_to_currency @product.price %></b>
-  <%= link_to "Add to basket", product_path(@product.permalink), :method => :post %>
-</p>
-
-<hr>
-<%= simple_format @product.description %>
-<hr>
-
-<p><%= link_to "Back to list", root_path %></p>
+<div id="product-show" class="container-fluid">
+	<div class="row">
+		<div class="col-sm-offset-1 col-md-6">
+			<% if @product.default_image %>
+		  		<%= image_tag @product.default_image.path, :style => "margin: auto; display: block; max-width: 450px" %>
+			<% end %>
+		</div>
+		<div class="col-md-4">
+			<div class="row">
+				<div class="col-xs-12">
+	              <h1 class="tier">Basic</h1>
+	            </div>
+			</div>
+			<h2><%= @product.name %></h2>
+			<h1><%= number_to_currency @product.price %></h1> 
+			<%= simple_format @product.description %>
+			<%= button_to "Add to basket", product_path(@product.permalink), :method => :post, :style => "float: right;" %>
+		</div>
+	</div>
+</div>
